--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,14 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-    <selenide.version>5.4.1</selenide.version>
-    <testng.version>6.14.3</testng.version>
-    <selenium.java.version>3.141.59</selenium.java.version>
-    <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
-    <maven.surefire.plugin.version>3.0.0-M5</maven.surefire.plugin.version>
+        <selenide.version>5.4.1</selenide.version>
+        <testng.version>6.14.3</testng.version>
+        <selenium.java.version>3.141.59</selenium.java.version>
+        <mvn.compiler.plugin.version>3.8.1</mvn.compiler.plugin.version>
+        <mvn.surefire.plugin.version>3.0.0-M5</mvn.surefire.plugin.version>
+        <allure.version>1.5.4</allure.version>
+        <aspectj.version>1.9.6</aspectj.version>
+        <allure.mvn.plugin.version>2.6</allure.mvn.plugin.version>
     </properties>
 
     <dependencies>
@@ -38,13 +41,25 @@
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>${maven.compiler.plugin.version}</version>
+            <version>${mvn.compiler.plugin.version}</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>${maven.surefire.plugin.version}</version>
+            <version>${mvn.surefire.plugin.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-testng-adaptor</artifactId>
+            <version>${allure.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.yandex.qatools.allure</groupId>
+            <artifactId>allure-maven-plugin</artifactId>
+            <version>${allure.mvn.plugin.version}</version>
         </dependency>
 
     </dependencies>
@@ -54,7 +69,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven.compiler.plugin.version}</version>
+                <version>${mvn.compiler.plugin.version}</version>
                 <configuration>
                     <source>1.6</source>
                     <target>1.6</target>
@@ -73,8 +88,32 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven.surefire.plugin.version}</version>
+                <version>${mvn.surefire.plugin.version}</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                    <argLine>
+                       -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>${aspectj.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
+
+    <reporting>
+        <excludeDefaults>true</excludeDefaults>
+        <plugins>
+            <plugin>
+                <groupId>ru.yandex.qatools.allure</groupId>
+                <artifactId>allure-maven-plugin</artifactId>
+                <version>${allure.mvn.plugin.version}</version>
+            </plugin>
+        </plugins>
+    </reporting>
 </project>
